apps/keycloak/private-route.yaml
# apps/keycloak/private-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-route
  namespace: keycloak
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: auth-private-https  
  hostnames: 
    - "auth.private.hoareau-marion.eu"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: "X-Forwarded-Proto"
                value: "https"
              - name: "X-Forwarded-Host"
                value: "auth.private.hoareau-marion.eu"
      backendRefs:
        - name: keycloak
          port: 8080
