apps/keycloak/route.yaml
# apps/keycloak/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: keycloak
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: auth-https  
  hostnames:
    - "auth.hoareau-marion.eu"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "X-Forwarded-Proto"
                value: "https"
    - backendRefs:
        - name: keycloak
          port: 8080
